[package]
name = "proxy-wallet-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.36.0"
anyhow = "1.0.80"
hex = "0.4.3"
futures = "0.3.30"
tokio-util = "0.7.15"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.30"
fs-err = "3.1.3"
env = "1.0.1"
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = "1.0.228"
async-trait = "0.1.89"
dotenv = "0.15.0"
urlencoding = "2.1.3"

[dependencies.linera-client]
path = "../linera-protocol/linera-client"
default-features = true
features = ["fs"]

[dependencies.linera-base]
path = "../linera-protocol/linera-base"

[dependencies.linera-rpc]
path = "../linera-protocol/linera-rpc"

[dependencies.linera-core]
path = "../linera-protocol/linera-core"

[dependencies.linera-faucet-client]
path = "../linera-protocol/linera-faucet/client"

[dependencies.linera-persistent]
path = "../linera-protocol/linera-persistent"

[dependencies.linera-storage]
path = "../linera-protocol/linera-storage"

[dependencies.linera-views]
path = "../linera-protocol/linera-views"
features = ["rocksdb"]

[dependencies.linera-execution]
path = "../linera-protocol/linera-execution"

[dependencies.linera-service]
path = "../linera-protocol/linera-service"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
